--- a/reverse-timer.html
+++ b/reverse-timer.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>GoIT67</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style-reverse-timer.css">
 </head>
 
 <body>
 
     <!-- 1 task -->
-    <p id="timer"></p>
+    <p id="timer">00 d. 00 h. 00 m. 00 s.</p>
         <button type="button" class="button" id="stopBtn">Stop</button>
         <button type="button" class="button start" id="startBtn" disabled>Start</button>
 
     <!-- 2 task -->
     <!-- <p id="timer"></p>
     <button type="button" class="button stop" id="btn">Stop</button> -->
-    <script src="js/test.js"></script>
+    <script src="./reverse-timer.js"></script>
 </body>
 
 </html>
