--- a/reserv timer/reverse-timer.html
+++ b/reserv timer/reverse-timer.html
@@ -17,7 +17,7 @@
     <!-- 2 task -->
     <!-- <p id="timer"></p>
     <button type="button" class="button stop" id="btn">Stop</button> -->
-    <script src="./reverse-timer.js"></script>
+    <script src="./reverse-timer.html"></script>
 </body>
 
 </html>
